--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "db:clear-notifications": "tsx prisma/clear-notifications.ts",
     "db:fix-interventions": "tsx prisma/fix-interventions.ts",
     "db:add-coordinates": "tsx prisma/add-fake-coordinates.ts",
+    "db:test": "npx tsx scripts/test-db-connection.ts",
     "tunnel": "cloudflared tunnel --url http://localhost:3010"
   },
   "dependencies": {
@@ -38,7 +39,7 @@
     "jspdf": "^3.0.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.303.0",
-    "next": "^16.1.1",
+    "next": "14.2.35",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -65,7 +66,7 @@
     "autoprefixer": "^10.4.16",
     "bcryptjs": "^2.4.3",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.2.35",
     "postcss": "^8.4.32",
     "prisma": "^5.7.1",
     "tailwindcss": "^3.4.0",
