--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "npm run db:generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "db:push": "npx --yes prisma@5.7.1 db push",
-    "db:studio": "npx --yes prisma@5.7.1 studio",
-    "db:generate": "npx --yes prisma@5.7.1 generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:generate": "prisma generate",
     "db:seed": "tsx prisma/seed.ts",
     "db:check": "tsx prisma/check-data.ts",
     "db:transfer": "tsx prisma/transfer-data.ts",
