--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "./node_modules/.bin/next dev -p 3010",
     "dev:tunnel": "next dev --hostname 0.0.0.0",
-    "build": "npm run db:generate && next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "db:push": "prisma db push",
