--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
-  "buildCommand": "npm ci && prisma generate && next build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm ci",
-  "framework": "nextjs",
-  "regions": ["cdg1"],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "buildCommand": "prisma generate && next build",
+  "framework": "nextjs"
 }
