feat: intégration logo et nom Billieve
✅ Nouveau logo SVG Billieve avec symbole B et tagline
✅ Remplacement Gestion Pro → Billieve dans tout le projet
✅ Mise à jour composant Logo pour utiliser le nouveau logo
✅ Mise à jour métadonnées et manifest
✅ Tagline: BELIEVE IN YOUR BUSINESS

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Gestion Pro - ERP Complet",
-  "short_name": "Gestion Pro",
+  "name": "Billieve - ERP Complet",
+  "short_name": "Billieve",
   "description": "ERP complet pour gérer l'ensemble de votre entreprise : clients, factures, devis, stock, planning et finances",
   "start_url": "/",
   "display": "standalone",
