refactor: Renommer Billieve en Billiev
- Remplacement de toutes les occurrences de 'Billieve' par 'Billiev' (sans le 'e' final)
- Fichiers modifiés :
  - app/page.tsx (landing page, témoignages, navigation)
  - app/layout.tsx (métadonnées, OpenGraph, Twitter)
  - public/manifest.json (nom de l'application)
  - components/Logo.tsx (texte alternatif)

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Billieve - ERP Complet",
-  "short_name": "Billieve",
+  "name": "Billiev - ERP Complet",
+  "short_name": "Billiev",
   "description": "ERP complet pour gérer l'ensemble de votre entreprise : clients, factures, devis, stock, planning et finances",
   "start_url": "/",
   "display": "standalone",
