--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint-config-next": "14.2.35",
     "postcss": "^8.4.32",
     "prisma": "^5.7.1",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.0",
     "tsx": "^4.20.6",
     "typescript": "^5.3.3"
